hphp/test/slow/hash_not_bang.php.expectf
Fatal error: This character is invalid. in %s/test/slow/hash_not_bang.php on line 1 
